--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Margins -->
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="timer_margin_top">64dp</dimen>
+
+    <!-- Text sizes -->
     <dimen name="default_text_size">24sp</dimen>
     <dimen name="timer_text_size">64sp</dimen>
-    <dimen name="timer_margin_top">64dp</dimen>
 </resources>
